# nulip

./: README.md  package-lock.json  package.json
app/: client.imba  clippy.imba  editor.imba  index.html  timeline.imba
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  nulip.rs  tulip.rs
src/components/: HelloWorld.vue
