[package]
authors = [ "you" ]
build = "src/build.rs"
default-run = "tulip"
description = "A Tauri App"
edition = "2018"
license = ""
name = "tulip"
repository = ""
version = "0.1.0"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tauri = { version = "0.9", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "tulip"
path = "src/main.rs"
