[package]
authors = ["you"]
build = "src/build.rs"
default-run = "tulip"
description = "A Tauri App"
edition = "2018"
license = ""
name = "tulip"
repository = ""
version = "0.1.0"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "0.9", features = ["all-api"]}
toml = "0.5"
ulid = {version = "0.4.1", features = ["serde"]}

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = ["tauri/embedded-server"]
no-server = ["tauri/no-server"]

[[bin]]
name = "tulip"
path = "src/main.rs"
